Update build